# macroquad-lua

./: .gitignore  Cargo.toml  README.md  TODO  TODO-API
.cargo/: config.toml
crates/macroquad-lua-cli/: Cargo.toml
crates/macroquad-lua-cli/src/: main.rs  util.rs
crates/macroquad-lua-macros/: Cargo.toml
crates/macroquad-lua-macros/src/: lib.rs
game/src/: main.lua  update.lua
src/: lua.rs  macroquad_bindings.rs  main.rs  utils.rs
src/lua/: debug.rs  mod.rs  release.rs
src/macroquad_bindings/: macros.rs  mod.rs
src/macroquad_bindings/functions/: camera.rs  color.rs  input.rs  mod.rs  rand.rs  shapes.rs  text.rs  time.rs  window.rs
src/macroquad_bindings/modules/: camera.rs  color.rs  extra.rs  input.rs  mod.rs  rand.rs  shapes.rs  text.rs  time.rs  window.rs
src/macroquad_bindings/types/: enums.rs  generics.rs  mod.rs  structs.rs
web/: index.html
web/js/: boudle.sh  mq-glue.js  readme.txt
web/js/src/: audio.js  emscripten.js  gl.js  quad-net.js  sapp_jsutils.js
